# Y_LAB-TASK-2

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  core.py  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pre-commit-config.yaml  pyproject.toml  python style.md  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_26_0115-ac89b632404e_initial_migration.py
db/: database.py  models.py  queries.py  queries_redis.py  redis.py  schemas.py  utils_redis.py
db/service/: postgres.py  redis.py
docker/: Dockerfile.db  Dockerfile.testdb
handlers/: handlers_dish.py  handlers_menu.py  handlers_submenu.py
service/: postgres.py  redis.py  utils_redis.py
tests/: alembic.ini  conftest.py  test_count_dishes_and_submenues.py  test_dish.py  test_menu.py  test_submenu.py  utils.py
tests/alembic/: env.py
