[tool.poetry]
name = "task_2"
version = "0.2.0"
description = ""
authors = ["oogway93 <marklem.coding.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
SQLAlchemy = "^2.0.25"
python-dotenv = "^1.0.0"
uvicorn = "^0.26.0"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.9"
flake8 = "^7.0.0"
pytest = "^7.4.4"
httpx = "^0.26.0"
pydantic = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
